syntax = "proto3";

package consensus;

option go_package = "github.com/pokt-network/pocket/consensus/types";

message Validator {
  string address = 1;
  string public_key = 2;
  string staked_amount = 3;
  string generic_param = 4; // TODO/DISCUSS re-evaluate naming covention
}
